docs: add favicon.ico

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resumait AI 온보딩 가이드</title>
     <link rel="stylesheet" href="styles/main.css">
+    
+    <!-- favicon 링크 추가 -->
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <!-- 다양한 기기 지원을 위한 추가 favicon 설정 -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
 </head>
 <body>
     <!-- 여기에 README.md의 내용이 렌더링됩니다 -->
